syntax = "proto3";
package db;
option go_package = "main";

import "google/protobuf/timestamp.proto";

message UserCache {
    int64 id = 1;
    string account_name = 2;
    bytes hashed_password = 3;
    string address = 4;
    int32 num_sell_items = 5;
    google.protobuf.Timestamp last_bump = 6;
    google.protobuf.Timestamp created_at = 7;
}

message ShippingCache {
    int64 transaction_evidence_id = 1;
    string status = 2;
    string item_name = 3;
    int64 item_id = 4;
    string reserve_id = 5;
    int64  reserve_time = 6;
    string to_address = 7;
    string to_name = 8;
    string from_address = 9;
    string from_name = 10;
    bytes img_binary = 11;
    google.protobuf.Timestamp created_at = 12;
    google.protobuf.Timestamp updated_at = 13;
}

message ItemCache {
    int64 id = 1;
    int64 seller_id = 2;
    int64 buyer_id = 3;
    string status = 4;
    string name = 5;
    int32 price = 6;
    string description = 7;
    string image_name = 8;
    int32 category_id = 9;
    google.protobuf.Timestamp created_at = 10;
    google.protobuf.Timestamp updated_at = 11;
}

message TransactionEvidenceCache {
    int64 id = 1;
    int64 seller_id = 2;
    int64 buyer_id = 3;
    string status = 4;
    int64 item_id = 5;
    string item_name = 6;
    int32 item_price = 7;
    string item_description = 8;
    int32 item_category_id = 9;
    int32 item_root_category_id = 10;
    google.protobuf.Timestamp created_at = 11;
    google.protobuf.Timestamp updated_at = 12;
}